<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent">

        <!--Put form controls here-->
        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reservation Form:"
            android:textSize="10pt">
        </TextView>

        <EditText
            android:id="@+id/EditTextStartTime"
            android:layout_height="wrap_content"
            android:hint="@string/starttime"
            android:inputType="textPersonName"
            android:layout_width="fill_parent">
        </EditText>

        <EditText
            android:id="@+id/EditTextEndtime"
            android:layout_height="wrap_content"
            android:hint="@string/endtime"
            android:inputType="textEmailAddress"
            android:layout_width="fill_parent">
        </EditText>

        <Spinner
            android:id="@+id/SpinnerKitchenItem"
            android:layout_height="wrap_content"
            android:prompt="@string/kitchenitem"
            android:layout_width="fill_parent"
            android:entries="@array/kitchenitemlist">
        </Spinner>

        <EditText
            android:id="@+id/EditTextDescription"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:lines="5"
            android:layout_width="fill_parent">
        </EditText>

        <CheckBox
            android:id="@+id/CheckBoxServing"
            android:layout_height="wrap_content"
            android:text="@string/servingcheck"
            android:layout_width="fill_parent">
        </CheckBox>

        <Button
            android:id="@+id/ButtonReserve"
            android:layout_height="wrap_content"
            android:text="@string/reservebutton"
            android:onClick="reserveTime"
            android:layout_width="fill_parent">
        </Button>

    </LinearLayout>
</ScrollView>